# agent-unit-testing

./: .dockerignore  .editorconfig  .gitignore  AgentEvalsWorkshop.sln  AgentEvalsWorkshop.slnx  Directory.Packages.props  README.md  apphost-stdout.txt  aspire.config.json  dotnet-tools.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/Rai/: charter.md  (+1 more)
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/rai/: audit-trail.md
exercises/: US0-intro.md  US1-retrieval-tool.md  US1-taskadheranceeval.md  US2-adherence-intent.md  US2-retrievalevaluator.md  US3-customevaluator.md  US4-meta-prompt.md  US5-meta-prompt.md
infra/scripts/: Check-AzureAvailability.ps1
infra/seed/: seed-data.json  seed-data.schema.json
solutions/: AgentRetrievalEvalTests.cs  AnswerScoringEvaluator.cs  PromptImprovementGenerator.cs  QuizGameAgentTests.cs  WeatherAssistantAgentTests.cs
solutions-python/: conftest.py  test_configuration_smoke.py  test_weather_assistant_agent.py
solutions-python/helpers/: __init__.py  agent_run.py  foundry_config.py
src-python/: .gitignore  README.md  pyproject.toml
src-python/agent_evals_workshop/: __init__.py  app.py  config.py
src-python/agent_evals_workshop/agents/: __init__.py  us1_agent.py
src/AgentEvalsWorkshop.AppHost/: AgentEvalsWorkshop.AppHost.csproj  Program.cs  appsettings.json  aspire.config.json
tests-python/: conftest.py  test_configuration_smoke.py  test_weather_assistant_agent.py
(+44 files in other folders)
